classDiagram
    direction TB

    class DisponibilidadController {
        +consultarDisponibilidad(ConsultaDisponibilidadRequest) List
    }

    class DisponibilidadService {
        +consultarDisponibilidad(ConsultarDisponibilidadQuery) List
    }

    class HabitacionRepositoryPort {
        <<port>>
        +findDisponibles(LocalDate, String) List
    }

    class HabitacionDisponibleResponse {
        +id
        +numero
        +estadoActual
    }

    class Habitacion {
        -String numero
        -String estadoActual
        +getPrecioBase() Double
    }

    class TipoHabitacion {
        -String nombreTipo
        -Double precioBase
        -Integer duracionHoras
        -String descripcion
        +getPrecio() Double
    }

    DisponibilidadController --> DisponibilidadService : usa
    DisponibilidadService --> HabitacionRepositoryPort : consulta
    DisponibilidadService --> HabitacionDisponibleResponse : construye
    HabitacionRepositoryPort ..> Habitacion : retorna
    Habitacion "*" --> "1" TipoHabitacion : clasificada-por
